# cosmic-applets

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  justfile  rust-toolchain.toml
applet/: Cargo.toml
applet/src/: lib.rs
applets/cosmic-app-list/: Cargo.toml  build.rs
applets/cosmic-app-list/data/: com.system76.CosmicAppList.desktop  com.system76.CosmicAppList.gschema.xml  com.system76.CosmicAppList.metainfo.xml
applets/cosmic-app-list/src/: app.rs  config.ron  config.rs  localize.rs  main.rs  style.css  toplevel_handler.rs  toplevel_subscription.rs  utils.rs  wayland.rs  wayland_source.rs
applets/cosmic-applet-audio/: Cargo.toml
applets/cosmic-applet-audio/data/: com.system76.CosmicAppletAudio.desktop
applets/cosmic-applet-audio/src/: app.rs  future.rs  icons.rs  input.rs  main.rs  now_playing.rs  output.rs  pa.rs  pulse.rs  task.rs  volume.rs  volume_scale.rs
applets/cosmic-applet-battery/: Cargo.toml
applets/cosmic-applet-battery/data/: com.system76.CosmicAppletBattery.desktop
applets/cosmic-applet-battery/src/: app.rs  backlight.rs  config.rs  main.rs  power_daemon.rs  upower_device.rs  upower_kbdbacklight.rs
applets/cosmic-applet-graphics/: Cargo.toml
applets/cosmic-applet-graphics/src/: dbus.rs  graphics.rs  main.rs  mode_box.rs  profile.rs  style.css  window.rs
applets/cosmic-applet-network/: Cargo.toml
applets/cosmic-applet-network/data/: com.system76.CosmicAppletNetwork.desktop
applets/cosmic-applet-network/src/: app.rs  main.rs  style.css  task.rs  ui.rs  widgets.rs
applets/cosmic-applet-notifications/: Cargo.toml
applets/cosmic-applet-notifications/data/: com.system76.CosmicAppletNotifications.desktop
applets/cosmic-applet-notifications/src/: dbus_service.rs  main.rs  notification_popover.rs  notification_widget.rs  notifications.rs
applets/cosmic-applet-power/: Cargo.toml
cosmic-app-list/: Cargo.toml
cosmic-app-list/cosmic-app-list-config/: Cargo.toml
cosmic-app-list/data/: com.system76.CosmicAppList.desktop  com.system76.CosmicAppList.metainfo.xml
cosmic-app-list/src/: app.rs  config.rs  lib.rs  localize.rs  main.rs  toplevel_handler.rs  toplevel_subscription.rs  utils.rs  wayland_handler.rs  wayland_subscription.rs
cosmic-applet-a11y/: Cargo.toml
cosmic-applet-a11y/data/: com.system76.CosmicAppletA11y.desktop
cosmic-applet-a11y/src/: app.rs  lib.rs  localize.rs  main.rs
cosmic-applet-audio/: Cargo.toml
cosmic-applet-audio/data/: com.system76.CosmicAppletAudio.desktop
cosmic-applet-audio/src/: config.rs  lib.rs  localize.rs  main.rs  model.rs  mouse_area.rs  mpris_subscription.rs  pipewire.rs  pulse.rs
cosmic-applet-battery/: Cargo.toml
cosmic-applet-battery/data/: com.system76.CosmicAppletBattery.desktop
cosmic-applet-battery/src/: app.rs  backlight.rs  config.rs  dgpu.rs  lib.rs  main.rs  power_daemon.rs  power_profiles.rs  upower.rs  upower_device.rs  upower_kbdbacklight.rs
cosmic-applet-bluetooth/: Cargo.toml
cosmic-applet-bluetooth/data/: com.system76.CosmicAppletBluetooth.desktop
cosmic-applet-bluetooth/src/: app.rs  bluetooth.rs  config.rs  lib.rs  localize.rs  main.rs
cosmic-applet-graphics/: Cargo.toml
cosmic-applet-graphics/data/: com.system76.CosmicAppletGraphics.desktop
cosmic-applet-graphics/src/: dbus.rs  main.rs  window.rs
cosmic-applet-i3status/: Cargo.toml
cosmic-applet-i3status/data/: com.system76.CosmicAppletI3status.desktop
cosmic-applet-i3status/src/: lib.rs  localize.rs  main.rs  subprocess.rs
cosmic-applet-input-sources/: Cargo.toml
cosmic-applet-input-sources/data/: com.system76.CosmicAppletInputSources.desktop
cosmic-applet-input-sources/src/: config.rs  lib.rs  localize.rs  main.rs  wayland.rs  window.rs
cosmic-applet-minimize/: Cargo.toml
cosmic-applet-minimize/data/: com.system76.CosmicAppletMinimize.desktop
cosmic-applet-minimize/src/: lib.rs  localize.rs  main.rs  wayland_handler.rs  wayland_subscription.rs  window_image.rs
cosmic-applet-network/: Cargo.toml
cosmic-applet-network/data/: com.system76.CosmicAppletNetwork.desktop
cosmic-applet-network/src/: app.rs  config.rs  lib.rs  localize.rs  main.rs  secret_store.rs  utils.rs
cosmic-applet-notifications/: Cargo.toml
cosmic-applet-notifications/data/: com.system76.CosmicAppletNotifications.desktop
cosmic-applet-notifications/src/: dbus.rs  lib.rs  localize.rs  main.rs  wayland_handler.rs  wayland_subscription.rs
cosmic-applet-power/: Cargo.toml
cosmic-applet-power/data/: com.system76.CosmicAppletPower.desktop
cosmic-applet-power/src/: cosmic_session.rs  lib.rs  main.rs  session_manager.rs
cosmic-applet-status-area/: Cargo.toml
cosmic-applet-status-area/data/: com.system76.CosmicAppletStatusArea.desktop  org.freedesktop.impl.portal.desktop.cosmic.service.in
cosmic-applet-status-area/src/: lib.rs  main.rs  status_notifier_watcher.rs  unique_names.rs
cosmic-applet-status-line/: Cargo.toml
cosmic-applet-status-line/data/: com.system76.CosmicAppletStatusLine.desktop
cosmic-applet-status-line/src/: bar_widget.rs  lib.rs  main.rs
cosmic-applet-tiling/: Cargo.toml
cosmic-applet-tiling/data/: com.system76.CosmicAppletTiling.desktop
cosmic-applet-tiling/src/: lib.rs  main.rs  wayland.rs  wayland_subscription.rs  window.rs
cosmic-applet-time/: Cargo.toml  Makefile
cosmic-applet-time/data/: com.system76.CosmicAppletTime.desktop
cosmic-applet-time/src/: config.rs  lib.rs  localize.rs  main.rs  time.rs  window.rs
cosmic-applet-workspaces/: Cargo.toml
cosmic-applet-workspaces/data/: com.system76.CosmicAppletWorkspaces.desktop
cosmic-applet-workspaces/src/: colors.rs  config.rs  lib.rs  main.rs  wayland.rs  wayland_subscription.rs
cosmic-applets/: Cargo.toml  build.rs
cosmic-applets/src/: main.rs
cosmic-panel-button/: Cargo.toml
cosmic-panel-button/src/: config.rs  lib.rs  main.rs
libcosmic-applet/: Cargo.toml
libcosmic-applet/src/: button.rs  lib.rs  window.rs
old-panel/: Cargo.toml  README.md
old-panel/src/: application.rs  main.rs  mpris.rs  notification_popover.rs  notifications.rs  status_area.rs  time_button.rs  window.rs
(+757 files in other folders)
