[workspace]
default-members = ["cosmic-applets", "cosmic-panel-button"]
members = [
    "cosmic-app-list",
    "cosmic-app-list/cosmic-app-list-config",
    "cosmic-applets",
    "cosmic-applet-audio",
    "cosmic-applet-battery",
    "cosmic-applet-bluetooth",
    "cosmic-applet-minimize",
    "cosmic-applet-network",
    "cosmic-applet-notifications",
    "cosmic-applet-power",
    "cosmic-applet-status-area",
    "cosmic-applet-tiling",
    "cosmic-applet-time",
    "cosmic-applet-workspaces",
    "cosmic-panel-button",
    "cosmic-applet-input-sources",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.81"
cctk = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-client-toolkit", rev = "c8d3a1c" }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", default-features = false, features = [
    "client",
], rev = "c8d3a1c" }
cosmic-settings-subscriptions = { git = "https://github.com/pop-os/cosmic-settings-subscriptions" }
cosmic-time = { git = "https://github.com/pop-os/cosmic-time", default-features = false, features = [
    "libcosmic",
    "once_cell",
] }


futures = "0.3"
futures-util = "0.3"
i18n-embed = { version = "0.14.1", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.8"
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "applet",
    "applet-token",
    "tokio",
    "wayland",
    "desktop",
    "dbus-config",
] }
rust-embed = "8.3"
rust-embed-utils = "8.3.0"
rustix = { version = "0.38", features = ["fs", "process"] }
zbus = { version = "4.2.1", default-features = false, features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-log = "0.2.0"
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
serde = { version = "1.0.152", features = ["derive"] }
freedesktop-desktop-entry = "0.7.5"

[profile.release]
lto = "fat"

[workspace.metadata.cargo-machete]
ignored = ["libcosmic"]
# [patch."https://github.com/pop-os/libcosmic"]
# cosmic-config = { git = "https://github.com/pop-os/libcosmic//" }
# libcosmic = { git = "https://github.com/pop-os/libcosmic//" }
