[workspace]
default-members = ["cosmic-applets", "cosmic-panel-button"]
members = [
    "cosmic-app-list",
    "cosmic-app-list/cosmic-app-list-config",
    "cosmic-applets",
    "cosmic-applet-audio",
    "cosmic-applet-battery",
    "cosmic-applet-bluetooth",
    "cosmic-applet-minimize",
    "cosmic-applet-network",
    "cosmic-applet-notifications",
    "cosmic-applet-power",
    "cosmic-applet-status-area",
    "cosmic-applet-tiling",
    "cosmic-applet-time",
    "cosmic-applet-workspaces",
    "cosmic-panel-button",
    "cosmic-applet-input-sources",
    "cosmic-applet-a11y",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
cctk = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-client-toolkit", rev = "178eb0b" }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", default-features = false, features = [
    "client",
], rev = "178eb0b" }
cosmic-settings-subscriptions = { git = "https://github.com/pop-os/cosmic-settings-subscriptions" }
# cosmic-settings-subscriptions = { path = "../cosmic-settings-subscriptions" }

cosmic-time = { git = "https://github.com/pop-os/cosmic-time", default-features = false, features = [
    "once_cell",
] }
# cosmic-time = { path = "../cosmic-time", default-features = false, features = [
#     "once_cell",
# ] }

futures = "0.3"
futures-util = "0.3"
i18n-embed = { version = "0.15.3", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.9"
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "applet",
    "applet-token",
    "multi-window",
    "tokio",
    "wayland",
    "desktop-systemd-scope",
    "winit",
    "dbus-config",
] }
once_cell = "1"
rust-embed = "8.5"
rust-embed-utils = "8.5.0"
rustix = { version = "0.38", features = ["fs", "process"] }
zbus = { version = "4", default-features = false, features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-log = "0.2.0"
tokio = { version = "1.43.0", features = ["full"] }
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
serde = { version = "1.0.217", features = ["derive"] }
freedesktop-desktop-entry = "0.7.8"

[profile.release]
lto = "fat"

[workspace.metadata.cargo-machete]
ignored = ["libcosmic"]
[patch."https://github.com/pop-os/libcosmic"]
cosmic-config = { git = "https://github.com/pop-os/libcosmic//", branch = "drop-menu-tree-changes" }
libcosmic = { git = "https://github.com/pop-os/libcosmic//", branch = "drop-menu-tree-changes" }
iced_futures = { git = "https://github.com/pop-os/libcosmic//", branch = "drop-menu-tree-changes" }

# cosmic-config = { path = "../libcosmic/cosmic-config" }
# libcosmic = { path = "../libcosmic" }
# iced_futures = { path = "../libcosmic/iced/futures" }

# [patch."https://github.com/pop-os/winit.git"]
# winit = { git = "https://github.com/rust-windowing/winit.git", rev = "241b7a80bba96c91fa3901729cd5dec66abb9be4" }
# winit = { path = "../winit" }
[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "=0.19.2" }

[patch."https://github.com/pop-os/cosmic-protocols"]
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols//", branch = "main" }
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols//", branch = "main" }
