[workspace]
default-members = ["cosmic-applets", "cosmic-panel-button"]
members = [
    "cosmic-app-list",
    "cosmic-app-list/cosmic-app-list-config",
    "cosmic-applets",
    "cosmic-applet-audio",
    "cosmic-applet-battery",
    "cosmic-applet-bluetooth",
    "cosmic-applet-minimize",
    "cosmic-applet-network",
    "cosmic-applet-notifications",
    "cosmic-applet-power",
    "cosmic-applet-status-area",
    "cosmic-applet-tiling",
    "cosmic-applet-time",
    "cosmic-applet-workspaces",
    "cosmic-panel-button",
    "cosmic-applet-input-sources",
    "cosmic-applet-a11y",
    "cosmic-applets-config",
]

resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
cctk = { git = "https://github.com/pop-os/cosmic-protocols", package = "cosmic-client-toolkit", rev = "d0e95be" }
cosmic-applets-config = { path = "cosmic-applets-config" }
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols", default-features = false, features = [
    "client",
], rev = "d0e95be" }
cosmic-time = { git = "https://github.com/pop-os/cosmic-time", default-features = false }
# cosmic-time = { path = "../cosmic-time", default-features = false ] }

futures = "0.3"
futures-util = "0.3"
i18n-embed = { version = "0.16.0", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.10"
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "applet",
    "applet-token",
    "dbus-config",
    "multi-window",
    "tokio",
    "wayland",
    "desktop-systemd-scope",
    "winit",
] }
rust-embed = "8.7.2"
rust-embed-utils = "8.7.2"
rustc-hash = "2.1"
rustix = { version = "1.1", features = ["fs", "process"] }
zbus = { version = "5.11.0", default-features = false, features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-log = "0.2.0"
tokio = { version = "1.47.1", features = ["full"] }
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
opt-level = 3
panic = "abort"
lto = "thin"

[workspace.metadata.cargo-machete]
ignored = ["libcosmic"]

# [patch."https://github.com/pop-os/libcosmic"]
# cosmic-config = { git = "https://github.com/pop-os/libcosmic//", branch = "" }
# libcosmic = { git = "https://github.com/pop-os/libcosmic//", branch = "" }
# iced_futures = { git = "https://github.com/pop-os/libcosmic//", branch = "" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# libcosmic = { path = "../libcosmic" }
# iced_futures = { path = "../libcosmic/iced/futures" }

# [patch."https://github.com/pop-os/winit.git"]
# winit = { git = "https://github.com/rust-windowing/winit.git", rev = "241b7a80bba96c91fa3901729cd5dec66abb9be4" }
# winit = { path = "../winit" }

[patch."https://github.com/smithay/client-toolkit.git"]
sctk = { package = "smithay-client-toolkit", version = "0.20.0" }

[patch."https://github.com/pop-os/cosmic-protocols"]
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols//", branch = "main" }
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols//", branch = "main" }
