[package]
name = "cosmic-app-list"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
cosmic-app-list-config = { path = "cosmic-app-list-config" }
anyhow.workspace = true
cctk.workspace = true
cosmic-protocols.workspace = true
futures.workspace = true
i18n-embed.workspace = true
i18n-embed-fl.workspace = true
image = { version = "0.25.0", default-features = false }
itertools = "0.13.0"
libcosmic.workspace = true
memmap2 = "0.9.4"
once_cell = "1.19"
rand = "0.8.5"
rust-embed.workspace = true
rustix.workspace = true
serde = { version = "1.0", features = ["derive"] }
switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }
tokio = { version = "1.36.0", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
    "process",
] }
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url = "2.5.0"
zbus.workspace = true
freedesktop-desktop-entry.workspace = true
