[package]
name = "cosmic-app-list"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
cosmic-app-list-config = { path = "cosmic-app-list-config" }
anyhow.workspace = true
cctk.workspace = true
cosmic-protocols.workspace = true
futures.workspace = true
i18n-embed.workspace = true
i18n-embed-fl.workspace = true
image = { version = "0.25.5", default-features = false }
itertools = "0.14.0"
libcosmic.workspace = true
memmap2 = "0.9.5"
rand = "0.9.0"
rust-embed.workspace = true
rustix.workspace = true
serde = { version = "1.0", features = ["derive"] }
switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }
tokio.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url = "2.5.4"
zbus.workspace = true
