[package]
name = "cosmic-app-list"
version = "1.0.2"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
cosmic-app-list-config = { path = "cosmic-app-list-config" }
anyhow.workspace = true
cctk.workspace = true
cosmic-protocols.workspace = true
futures.workspace = true
i18n-embed.workspace = true
i18n-embed-fl.workspace = true
image = { version = "0.25.9", default-features = false }
libcosmic.workspace = true
memmap2 = "0.9.9"
notify = "8.2"
fastrand = "2.3.0"
rust-embed.workspace = true
rustix.workspace = true
rustc-hash.workspace = true
switcheroo-control = { git = "https://github.com/pop-os/dbus-settings-bindings" }
tokio.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url = "2.5.8"
zbus.workspace = true
