[package]
name = "cosmic-applet-a11y"
version = "0.1.0"
edition = "2024"

[dependencies]
# cosmic-dbus-a11y = { git = "https://github.com/pop-os/dbus-settings-bindings" }
cosmic-settings-subscriptions.workspace = true
cosmic-settings-subscriptions.accessibility = true
cosmic-settings-subscriptions.cosmic_a11y_manager = true
anyhow.workspace = true
cctk.workspace = true
cosmic-protocols.workspace = true
cosmic-time.workspace = true
i18n-embed-fl.workspace = true
i18n-embed.workspace = true
libcosmic.workspace = true
rust-embed.workspace = true
tokio.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
zbus.workspace = true
