[package]
name = "cosmic-applet-audio"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
cosmic-settings-subscriptions.workspace = true
cosmic-time.workspace = true
i18n-embed-fl.workspace = true
i18n-embed.workspace = true
libcosmic.workspace = true
libpulse-binding = "2.28.2"
mpris2-zbus = { git = "https://github.com/pop-os/dbus-settings-bindings" }
rust-embed.workspace = true
serde = "1.0.217"
tokio.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url = "2"
urlencoding = "2.1.3"
zbus.workspace = true
