[package]
name = "cosmic-applet-battery"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
anyhow = "1"
cosmic-settings-subscriptions.workspace = true
cosmic-settings-subscriptions.features = ["settings_daemon", "upower"]
cosmic-time.workspace = true
drm = "0.14.1"
futures.workspace = true
i18n-embed-fl.workspace = true
i18n-embed.workspace = true
libcosmic.workspace = true
once_cell = "1.20.3"
rust-embed.workspace = true
tokio.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
udev = "0.9"
zbus.workspace = true
