[package]
name = "cosmic-applet-battery"
version = "1.0.2"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
anyhow.workspace = true
cosmic-time.workspace = true
drm = "0.14.1"
futures.workspace = true
i18n-embed-fl.workspace = true
i18n-embed.workspace = true
libcosmic.workspace = true
rust-embed.workspace = true
rustc-hash.workspace = true
tokio.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
udev = "0.9"
zbus.workspace = true

[dependencies.cosmic-settings-upower-subscription]
git = "https://github.com/pop-os/cosmic-settings"

[dependencies.cosmic-settings-daemon-subscription]
git = "https://github.com/pop-os/cosmic-settings"
