[package]
name = "cosmic-applet-bluetooth"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
anyhow.workspace = true
bluer = { version = "0.17", features = ["bluetoothd", "id"] }
cosmic-time.workspace = true
futures.workspace = true
i18n-embed-fl.workspace = true
i18n-embed.workspace = true
libcosmic.workspace = true
once_cell = "1.19.0"
rand = "0.8"
rust-embed.workspace = true
tokio = { version = "1.36.0", features = ["full"] }
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
