[package]
name = "cosmic-applet-bluetooth"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
anyhow.workspace = true
bluer = { version = "0.17", features = ["bluetoothd", "id"] }
cosmic-time.workspace = true
futures.workspace = true
i18n-embed-fl.workspace = true
i18n-embed.workspace = true
libcosmic.workspace = true
once_cell = "1.20.3"
rand = "0.9"
rust-embed.workspace = true
tokio.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
