[package]
name = "cosmic-applet-bluetooth"
version = "1.0.2"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
anyhow.workspace = true
bluer = { version = "0.17", features = ["bluetoothd", "id"] }
futures.workspace = true
i18n-embed-fl.workspace = true
i18n-embed.workspace = true
libcosmic.workspace = true
fastrand = "2.3.0"
rust-embed.workspace = true
rustc-hash.workspace = true
tokio.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
