[package]
name = "cosmic-applet-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus.workspace = true
libcosmic.workspace = true
once_cell = "1"
# Application i18n
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.7.0"
rust-embed = "8.0.0"
tracing = "0.1"
