[package]
name = "cosmic-applet-i3status"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
i18n-embed-fl.workspace = true
i18n-embed.workspace = true
libcosmic.workspace = true
once_cell = "1"
rust-embed.workspace = true
serde_json = "1"
swaybar-types = "3.0.0"
tokio = { version = "1.36.0", features = ["time", "process"] }
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
