[package]
name = "cosmic-applet-input-sources"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
# cosmic-time.workspace = true
cosmic-comp-config = { git = "https://github.com/pop-os/cosmic-comp.git", rev = "5eb5af4" }
i18n-embed-fl.workspace = true
i18n-embed.workspace = true
libcosmic.workspace = true
libpulse-binding = "2.28.2"
rust-embed.workspace = true
tokio.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
serde = { version = "1.0.217", features = ["derive"] }
once_cell = "1.20.3"
xkb-data = "0.2"
