[package]
name = "cosmic-applet-minimize"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
i18n-embed-fl.workspace = true
i18n-embed.workspace = true
image = "0.24"
libcosmic.workspace = true
memmap2 = "0.9.4"
once_cell = "1"
png = "0.17.13"
rust-embed-utils.workspace = true
rust-embed.workspace = true
rustix = { version = "0.38.31", features = ["fs"] }
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["sync", "macros"] }
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
