[package]
name = "cosmic-applet-minimize"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
anyhow.workspace = true
i18n-embed-fl.workspace = true
i18n-embed.workspace = true
image = { version = "0.25.8", default-features = false }
libcosmic.workspace = true
memmap2 = "0.9.8"
rust-embed.workspace = true
rustix.workspace = true
tokio.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
