[package]
name = "cosmic-applet-network"
version = "1.0.15"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
async-fn-stream = "0.3"
futures.workspace = true
futures-util.workspace = true
i18n-embed-fl.workspace = true
i18n-embed.workspace = true
libcosmic = { workspace = true, features = [
    "applet",
    "applet-token",
    "tokio",
    "wayland",
    "desktop",
] }
rust-embed.workspace = true
rustc-hash.workspace = true
tokio.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
indexmap = "2.13.0"
secure-string = "0.3.0"
uuid = { version = "1.21.0", features = ["v4"] }
nmrs = "3.3.0"
