[package]
name = "cosmic-applet-notifications"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
anyhow.workspace = true
cosmic-time.workspace = true
libcosmic.workspace = true
tokio.workspace = true
cosmic-notifications-util = { git = "https://github.com/pop-os/cosmic-notifications" }
cosmic-notifications-config = { git = "https://github.com/pop-os/cosmic-notifications" }
# cosmic-notifications-util = { path = "../../cosmic-notifications-daemon/cosmic-notifications-util" }
# cosmic-notifications-config = { path = "../../cosmic-notifications-daemon/cosmic-notifications-config" }
futures-util = { version = "0.3", features = ["sink"] }
tracing = "0.1"
ron = "0.8"
sendfd = { version = "0.4", features = ["tokio"] }
bytemuck = "1"
tracing-subscriber.workspace = true
tracing-log.workspace = true
zbus.workspace = true
zbus.features = ["tokio", "p2p"]
# Application i18n
i18n-embed = { version = "0.15.3", features = [
    "fluent-system",
    "desktop-requester",
] }
i18n-embed-fl = "0.9.3"
rust-embed = "8.5.0"
rust-embed-utils = "8.5.0"
url = "2.5.4"
