[package]
name = "cosmic-applet-power"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
i18n-embed-fl.workspace = true
i18n-embed.workspace = true
libcosmic.workspace = true
logind-zbus = "4.0.3"
once_cell = "1.19.0"
rust-embed.workspace = true
rustix.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
zbus.workspace = true
