[package]
name = "cosmic-applet-power"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
i18n-embed-fl.workspace = true
i18n-embed.workspace = true
libcosmic.workspace = true
logind-zbus = "5.3.2"
rust-embed.workspace = true
rustix.workspace = true
tokio.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
zbus.workspace = true
