[package]
name = "cosmic-applet-status-area"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
futures.workspace = true
libcosmic.workspace = true
serde = "1"
tokio = { version = "1.36.0" }
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true
