[package]
name = "cosmic-applet-status-area"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
futures.workspace = true
libcosmic.workspace = true
serde.workspace = true
rustc-hash.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
zbus.workspace = true
