[package]
name = "cosmic-applet-status-line"
version = "0.1.0"
edition = "2021"

[dependencies]
delegate = "0.9"
libcosmic.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27", features = ["io-util", "process", "sync"] }
tokio-stream = "0.1"
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
