[package]
name = "cosmic-applet-tiling"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
libcosmic.workspace = true
anyhow.workspace = true
cctk.workspace = true
cosmic-comp-config = { git = "https://github.com/pop-os/cosmic-comp.git", rev = "5eb5af4" }
cosmic-protocols.workspace = true
cosmic-time.workspace = true
i18n-embed-fl.workspace = true
i18n-embed.workspace = true
once_cell = "1"
rust-embed.workspace = true
tokio = { version = "1.36.0", features = ["sync", "rt"] }
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
xkb-data = "0.1.0"
