[package]
name = "cosmic-applet-tiling"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
libcosmic.workspace = true
anyhow.workspace = true
cctk.workspace = true
cosmic-comp-config = { git = "https://github.com/pop-os/cosmic-comp.git", rev = "5eb5af4" }
cosmic-protocols.workspace = true
cosmic-time.workspace = true
i18n-embed-fl.workspace = true
i18n-embed.workspace = true
rust-embed.workspace = true
rustc-hash.workspace = true
tokio.workspace = true
tracing-log.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
