[package]
name = "cosmic-applet-workspaces"
version = "0.1.0"
authors = ["Ashley Wulber <ashley@system76.com>"]
edition = "2021"

[dependencies]
libcosmic.workspace = true
cctk.workspace = true
cosmic-protocols.workspace = true
log = "0.4"
pretty_env_logger = "0.5"
once_cell = "1.9"
futures = "0.3.21"
anyhow = "1.0"
# Application i18n
i18n-embed = { version = "0.14.1", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.7.0"
rust-embed = "8.0.0"
