[package]
name = "cosmic-applet-workspaces"
version = "0.1.1"
authors = ["Ashley Wulber <ashley@system76.com>"]
edition = "2021"

[dependencies]
libcosmic.workspace = true
cctk.workspace = true
cosmic-protocols.workspace = true
nix = "0.26.1"
log = "0.4"
tracing-subscriber.workspace = true
tracing-log.workspace = true
once_cell = "1.9"
futures = "0.3.21"
xdg = "2.4.0"
anyhow = "1.0"
# Application i18n
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.3.0"
